force-app/main/default/objects/Contact/fields/ATM_Fee_in_Other_Currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_Other_Currencies__c</fullName>
    <formula>IF( AND( N26_Promotion__r.ATM_Fee_Discount__c&gt;0, Promotion_Start_Date__c &lt;= TODAY() , Promotion_End_Date__c &gt;= TODAY()),  N26_Product__r.ATM_Fee_in_Other_Currencies__c-N26_Product__r.ATM_Fee_in_Other_Currencies__c*N26_Promotion__r.ATM_Fee_Discount__c,
N26_Product__r.ATM_Fee_in_Other_Currencies__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATM Fee in Other Currencies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>