force-app/main/default/objects/Contact/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <formula>IF( AND( N26_Promotion__r.Card_Replacement_Cost_Discount__c &gt;0,  Promotion_Start_Date__c &lt;= TODAY() , Promotion_End_Date__c &gt;= TODAY()), 

ROUND(N26_Product__r.Card_Replacement_Cost__c-N26_Product__r.Card_Replacement_Cost__c*N26_Promotion__r.Card_Replacement_Cost_Discount__c ,2),

N26_Product__r.Card_Replacement_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>