force-app/main/default/objects/Contact/fields/Cost_per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month__c</fullName>
    <formula>IF( AND(  N26_Promotion__r.Cost_per_Calendar_Month_Discount__c &gt;0, Promotion_Start_Date__c &lt;= TODAY() , Promotion_End_Date__c &gt;= TODAY()), 

ROUND(N26_Product__r.Cost_per_Calendar_Month__c-N26_Product__r.Cost_per_Calendar_Month__c*N26_Promotion__r.Cost_per_Calendar_Month_Discount__c ,2),

N26_Product__r.Cost_per_Calendar_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Calendar Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>