force-app/main/default/objects/Contact/fields/N26_Promotion__c.field-meta.xml
<CustomField>
    <fullName>N26_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N26 Promotion</label>
    <referenceTo>N26_Promotion__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>