force-app/main/default/objects/Contact/fields/Promotion_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotion_End_Date__c</fullName>
    <formula>IF( AND(N26_Promotion__r.Duration_in_Months__c &gt; 0 , NOT(ISNULL(Promotion_Start_Date__c))) , ADDMONTHS(Promotion_Start_Date__c,N26_Promotion__r.Duration_in_Months__c), NULL )</formula>
    <label>Promotion End Date</label>
    <type>Date</type>
</CustomField>