force-app/main/default/objects/Contact/fields/Promotion_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Start_Date__c</fullName>
    <label>Promotion Start Date</label>
    <type>Date</type>
</CustomField>